# mzsql

./: .gitignore  CSE 583 - Final Presentation.pptx  README.ipynb  README.md  README.qmd  User Stories  environment.yml  ms_format_overview.md  mzML_notebook.ipynb  mzMLb testing.ipynb  mzMLb_notebook.ipynb  mzdb_testing(1).ipynb  mzdb_testing.ipynb  mzsql.Rproj  mzsql.py  output.txt  package-list.txt  pyproject.toml  user_stories.md
.github/workflows/: environment.yml  (+1 more)
converters/: DuckDB_notebook.ipynb  SQLite_notebook.ipynb  duckdb_functions.py  sqlite_functions.py  turn_mzml_duckdb.R  turn_mzml_duckdb.py  turn_mzml_sqlite.R  turn_mzml_sqlite.py
demo_data/: 180205_Poo_TruePoo_Full1.json  README.md
demo_notebooks/: Aird_notebook.ipynb  DuckDB_notebook.ipynb  MS2_all.ipynb  MzTree_notebook.ipynb  SQLite_notebook.ipynb  compiled_timings.csv  mz5_notebook.ipynb  mzDB_notebook.ipynb  mzMD_notebook.ipynb  mzML_idx_notebook.ipynb  mzML_notebook.ipynb  mzMLb_notebook.ipynb  mza_notebook.ipynb  mzml_timing.ipynb  test_functions.ipynb
manuscript/: Exported Items.bib  chrom_timing_data.csv  edits_from_anitra.docx  edits_from_sam.docx  figscript.R  full_timing_comp.ipynb  manuscript.Rmd  manuscript.Rproj  manuscript.docx  rtrange_timing_data.csv  spec_timing_data.csv  template.docx
metsoc_poster/: .Rhistory  chrom_script.jl  db_maker.R  imzml_script.R  metsoc_poster.pub  ms3_script.py  timing_size_script.R
tests/: test_duckdb_funs.py  test_mz5_funs.py  test_mzML_funs.py  test_mza_funs.py  test_mzdb_functions.py  test_mzmlb_funs.py  test_sqlite_funs.py  visual_test.ipynb
(+41 files in other folders)
